# espnpy

./: .gitignore  README.md  add_all_leagues.py  debug_college_hoops.py  debug_get_url.py  debug_nba.py  debug_nhl.py  debug_nhl_active.py  debug_soccer.py  debug_wnba.py  debug_wnba_auth.py  generate_constants.py  investigate_athlete_team.py  investigate_athletes.py  investigate_endpoints.py  investigate_history.py  investigate_live_plays.py  investigate_nba_plays.py  investigate_news.py  investigate_roster.py  investigate_roster_2.py  investigate_roster_3.py  investigate_roster_4.py  investigate_roster_5.py  investigate_scoreboard.py  investigate_summary.py  investigate_teams.py  mkdocs.yml  pyproject.toml  test_boxscore_parse.py  test_global_client.py  test_headshot.py  test_news_all_leagues.py  test_parse_scoreboard.py  test_script.py
docs/: 01_getting_started.md  02_league_proxies.md  03_entities.md  04_data_and_stats.md  05_live_action.md  06_news.md  07_popular_leagues.md  08_individual_sports.md
examples/: README.md
examples/basketball/: 01_nba_standings_and_splits.py  02_nba_time_travel.py
examples/football/: 01_nfl_scoreboard_and_boxscore.py  02_nfl_team_schedule.py
examples/golf/: 01_pga_leaderboard.py
examples/racing/: 01_f1_standings_and_grid.py
src/espnpy/: __init__.py  (+2 more)
tests/: test_athletes.py  test_client.py
v2_tests/: test_01_standings.py  test_02_athlete_stats.py  test_03_all_features.py  test_04_boxscores.py  test_05_odds.py  test_06_team_schedules.py  test_07_scoreboard_groups.py  test_08_seasontypes.py  test_09_individual_sports.py
(+3 files in other folders)
