[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "espnpy"
version = "1.0.0"
description = "A high-performance, asynchronous Python wrapper for ESPN's hidden APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
